; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_locks.c_hw_lock_unlock_nopreempt.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_locks.c_hw_lock_unlock_nopreempt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [65 x i8] c"Attempt to release no-preempt spinlock %p in preemptible context\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @hw_lock_unlock_nopreempt(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = call i32 (...) @current_thread()
  %4 = call i32 @preemption_disabled_for_thread(i32 %3)
  %5 = icmp ne i32 %4, 0
  %6 = xor i1 %5, true
  %7 = zext i1 %6 to i32
  %8 = call i64 @__improbable(i32 %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %1
  %11 = load i32, i32* %2, align 4
  %12 = call i32 @panic(i8* getelementptr inbounds ([65 x i8], [65 x i8]* @.str, i64 0, i64 0), i32 %11)
  br label %13

13:                                               ; preds = %10, %1
  %14 = load i32, i32* %2, align 4
  %15 = call i32 @hw_lock_unlock_internal(i32 %14)
  ret void
}

declare dso_local i64 @__improbable(i32) #1

declare dso_local i32 @preemption_disabled_for_thread(i32) #1

declare dso_local i32 @current_thread(...) #1

declare dso_local i32 @panic(i8*, i32) #1

declare dso_local i32 @hw_lock_unlock_internal(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
